--- a/templates/about/faq.html
+++ b/templates/about/faq.html
@@ -14,6 +14,9 @@
         #credits dd:before {
             content: "- ";
         }
+#page_sub_nav {
+  display: none;
+}
     </style>
 	<style>
     #faq {
@@ -93,14 +96,16 @@
 		</br></br>
 		In de jaren dat ik zelf onderwijs kreeg heb ik me vaak dood ge&euml;rgerd aan de manier waarop informatie werd overgebracht in lesboeken en colleges. Er waren verbanden aan te brengen tussen bepaalde onderdelen van het lesprogramma waar totaal aan voorbijgegaan werd ondanks dat het de lesstof toegankelijker gemaakt zou hebben, en vooral ook leuker en beter te onthouden.
 		</br></br>
-		k had het gevoel dat fascinerende en prachtige concepten min of meer expres gepropt werden in vele bladzijden van slaapverwekkende teksten en eentonige, van papier opgelezen lessen. Ik zag hoe overigens slimme leeftijdgenoten onderdelen en formules van examenstof uit hun hoofd zaten te leren zonder enig idee waar het eigenlijk over ging en de lesstof dus binnen een paar weken helemaal kwijt waren. Met deze video's laat ik zien hoe die concepten eigenlijk uitgelegd hadden moeten worden, zonder daarbij concessies te doen aan de kern van de stof of de volledigheid.
+		Ik had het gevoel dat fascinerende en prachtige concepten min of meer expres gepropt werden in vele bladzijden van slaapverwekkende teksten en eentonige, van papier opgelezen lessen. Ik zag hoe overigens slimme leeftijdgenoten onderdelen en formules van examenstof uit hun hoofd zaten te leren zonder enig idee waar het eigenlijk over ging en de lesstof dus binnen een paar weken helemaal kwijt waren. Met deze video's laat ik zien hoe die concepten eigenlijk uitgelegd hadden moeten worden, zonder daarbij concessies te doen aan de kern van de stof of de volledigheid.
+		</br></br>
+	    De Nederlandse Khan Academie bestaat nog maar kort, dus we hebben nog niet veel vragen ontvangen :-)</br>
+		Heb je een vraag die hier niet wordt beantwoord? <a href="https://www.google.com/moderator/#15/e=1d97ce&t=1d97ce.40" target="_blank">Stel 'm hier!</a>
+        </br></br>
+		Heb je een vraag over een oefening? Ga dan naar die oefening en kies daar linksonder voor "Probleem melden". Op die manier weten wij meteen over welke oefening je de vraag stelt.
 	</p>	
+    <br />
 	</div>
     <div class="clear"></div>
-	    <div style="text-align:left; padding-bottom: 18px;"><p>De Nederlandse Khan Academie bestaat nog maar kort, dus we hebben nog niet veel vragen ontvangen :-)</br>
-		Heb je een vraag die hier niet wordt beantwoord? <a href="https://www.google.com/moderator/#15/e=1d97ce&t=1d97ce.40" target="_blank">Stel 'm hier!</a></br></br>
-		Heb je een vraag over een oefening? Ga dan naar die oefening en kies daar linksonder voor "Probleem melden". Op die manier weten wij meteen over welke oefening je de vraag stelt.</p></div>
-    <p>&nbsp;</p>
 </div>
 <script type="text/javascript">
     $(document).ready(function() {	
@@ -126,5 +131,5 @@
 {% endblock aboutcontent %}
 
 {% block bottompagescript %}
-    {{ analytics.crazyegg_tracker(False) }}
+{#    {{ analytics.crazyegg_tracker(False) }} #}
 {% endblock bottompagescript %}
