--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -22,7 +22,7 @@
     height: 186px;
     display: block;
   }
-  #leaves {
+  #spare-leaves {
     background:url('images/missing-leaf.png') 0px 0px;
     width:344px;
     height:313px;
@@ -59,7 +59,7 @@
     </div>
     -->
     <div id="homepage-left-col">
-        <div id="leaves"></div>
+        <div id="spare-leaves"></div>
         <div id="homepage-logo"></div>
         <div id="social-actions">
             <table>
