--- a/templates/page_footer_short.html
+++ b/templates/page_footer_short.html
@@ -1,3 +1,17 @@
+<style>
+footer.short {
+    background: none;
+    border: none;
+}
+footer.short .inner {
+    margin: 10px auto 15px;
+    font-size: 16px;
+}
+footer #leaves {
+    background-image: none;
+}
+</style>
+
 <footer id="footer" class="short">
     <div id="leaves">
         <div class="inner">
@@ -19,6 +33,10 @@
                 <span class="sep">|</span>
                 <a href="{% if user_data.is_demo %}/logout?continue={% endif %}/mobilesite" {%if user_data.is_demo %}class="show-demo-dialog"{% endif %}>Mobile Site</a>
             {% endif %}
+            <span class="sep">|</span>
+                <a href="/about/contact">Contact</a>
+            <span class="sep">|</span>
+        <a href="/about/faq">FAQ</a>
             <span class="sep">|</span>
             <span class="small-social-links">
                 <a class="google-analytics-link-track youtube" onclick="_gaq.push(['_trackEvent', 'Click', 'Youtube-Subscribe-Header']);" href="http://www.youtube.com/khanacademie" title="Youtube"></a>
