Report a problem collects into a Google Doc spreadsheet

--- a/templates/reportissue_template.html
+++ b/templates/reportissue_template.html
@@ -26,15 +26,22 @@ function submitForm(value)
         {% block submitted_the_issue %}je probleem gemeld.{% endblock submitted_the_issue %}
         Je kunt je hier makkelijk bij aansluiten door te klikken op <b>de ster ernaast</b> in
         de
-        {% block list_of_issues_link %}<a href="http://code.google.com/p/khanacademie-nl/issues/list?can=2&q=Status:Accepted,Started%20Type:Defect&sort=-stars&colspec=Summary">lijst van bekende problemen</a>{% endblock list_of_issues_link %}.
+        {% block list_of_issues_link %}<a href="https://github.com/PerceptumNL/KhanLatest/issues">lijst van bekende problemen</a>{% endblock list_of_issues_link %}.
         Wanneer dit niet het geval is, kun het beste de onderstaande stappen volgen om een nieuw probleem aan te maken in ons volgsysteem.
-	<ol>
-		<li>Ga naar het 
-	        {% block new_issue_link %}<a href="http://code.google.com/p/khanacademie-nl/issues/entry?template=Defect%20report%20from%20user">nieuw probleem-formulier</a>{% endblock new_issue_link %}.
-		</li>
-		<li>Vul de <b>Samenvatting</b> en <b>Omschrijving</b> velden in. <span style="color: red; font-size: 12px;"/>Let op: De informatie die je verstrekt wordt openbaar, dus neem geen persoonlijk informatie op.</span></li>
-		<li>Klik op de <b>Submit Issue</b> knop.</li>
-	</ol>
+
+        <form method="POST" action="/reportissue">
+        <label style="display:block;">Email</label>
+        <input name="email" type="text" id="issue-description" class="simple-input ui-corner-all blur-on-esc" placeholder="Email" style="width:400px"></input>
+        <br />
+        <label style="display:block;">Title</label>
+        <input name="title" type="text" id="issue-title" class="simple-input ui-corner-all blur-on-esc" placeholder="Title" style="width:400px"/>
+        <br />
+        <label style="display:block;">Description</label>
+        <textarea name="description" type="text" id="issue-description" class="simple-input ui-corner-all blur-on-esc" placeholder="Description" style="width:400px;height:200px"></textarea>
+        <br />
+        <input type="submit" text="Submit"></input>
+        </form>
+
         <p>Jouw bijdrage zal in de lijst opgenomen worden nadat wij het probleem bekeken hebben.
         <p>Wanneer je je aansluit bij een bestaand probleem, of wanneer je een nieuw probleem aanmaakt, zul je e-mails ontvangen wanneer mensen op het probleem reageren.&nbsp;
         Wanneer wij denken dat we het probleem hebben opgelost zul je een e-mail ontvangen waarin staat "Status: Probleem verholpen", en je zult zelf het verschil zien
