Fix homepage leaves position and footer paddings

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -26,8 +26,8 @@
     background:url('images/missing-leaf.png') 0px 0px;
     width:344px;
     height:313px;
-    position:absolute;
-    top:24px;
+    position:relative;
+    top:-17px;
     left:158px;
     z-index:10;
   }
@@ -59,8 +59,9 @@
     </div>
     -->
     <div id="homepage-left-col">
-        <div id="spare-leaves"></div>
-        <div id="homepage-logo"></div>
+        <div id="homepage-logo">
+            <div id="spare-leaves"></div>
+        </div>
         <div id="social-actions">
             <table>
                 <tr>
