--- a/templates/reportissue_template.html
+++ b/templates/reportissue_template.html
@@ -37,8 +37,10 @@ function submitForm(value)
         <input name="title" type="text" id="issue-title" class="simple-input ui-corner-all blur-on-esc" placeholder="Title" style="width:400px"/>
         <br />
         <label style="display:block;">Description</label>
-        <textarea name="description" type="text" id="issue-description" class="simple-input ui-corner-all blur-on-esc" placeholder="Description" style="width:400px;height:200px"></textarea>
+        <textarea name="ureport" type="text" id="issue-description" class="simple-input ui-corner-all blur-on-esc" placeholder="Description" style="width:400px;height:200px"></textarea>
         <br />
+        <input type="hidden" name="page" value="reportaproblem"></input>
+        <input type="hidden" name="utype" value="general"></input>
         <input type="submit" text="Submit"></input>
         </form>
 
