Open blog in a blank page

--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -156,7 +156,7 @@
                                             <a href="{% if user_data.is_demo %}/logout?continue={% endif %}/class_profile" data-tag="Header" class="{% if selected_nav_link == 'coach' %}selected{% endif %} coach-link{%if user_data.is_demo %} show-demo-dialog{% endif %}">Coach</a>
                                             {% endif %}
                                             <a href="{% if user_data.is_demo %}/logout?continue={% endif %}/contribute" data-tag="Header" class="{% if selected_nav_link == 'contribute' %}selected{% endif %} contribute-link{%if user_data.is_demo %} show-demo-dialog{% endif %}">Help Mee</a>
-                                            <a href="http://blog.khanacademie.nl/" data-tag="Header">Blog</a>
+                                            <a href="http://blog.khanacademie.nl/" target="_blank" data-tag="Header">Blog</a>
                                             <!--
                                             <a href="{% if user_data.is_demo %}/logout?continue={% endif %}/about" data-tag="Header" class="{% if selected_nav_link == 'about' %}selected{% endif %} about-link{%if user_data.is_demo %} show-demo-dialog{% endif %}">Over Ons</a>
                                             -->
