Translate exercise title

--- a/javascript/exercises-package/exercise-header.handlebars
+++ b/javascript/exercises-package/exercise-header.handlebars
@@ -11,7 +11,8 @@ Review
             &nbsp;<!-- Practice exercises don't have badge images, just a placeholder -->
         </span>
     </div>
-    <span class="practice-exercise-topic-context">Oefen</span> {{practiceExercise.displayName}}
+    <span class="practice-exercise-topic-context">Oefen</span>
+    <span class="practice-exercise-displayname">{{practiceExercise.displayName}}</span>
     <span class="practice-exercise-topic-context">in </span>
     <span class="practice-exercise-topic-context solid-hover">
         <img class="topic-exercise-image inline" src="{{topicExerciseBadge.icons.compact}}">
