--- a/templates/about/about_the_team.html
+++ b/templates/about/about_the_team.html
@@ -241,8 +241,8 @@
             <h3>School Implementations Lead</h3>
             <p class="contact-links">
                 <a href="http://khanacademy.desk.com/customer/portal/topics/189393-khan-academy-in-the-classroom/articles" class="contact-blog">FAQ</a>
-                <a href="/profile/sundar" class="contact-ka">Profile</a>
-                <a href="/coach/resources" class="contact-ka">Teacher Resources</a>
+                <a href="/profile/sundar" class="contact-ka">Profiel</a>
+                <a href="/coach/resources" class="contact-ka">Middelen voor de leraar(es)</a>
             </p>
 
             <p>
