--- a/templates/coach_resources/view_toolkit.html
+++ b/templates/coach_resources/view_toolkit.html
@@ -117,9 +117,9 @@
 
 {% block pagesubmenu %}
 <span class="breadcrumbs_nav">
-    <a href="/coach/resources" id="teacher-resources" class="selected">Teacher Resources<span style="font-size:8px;color:orange;"> NEW</span>
-    <a href="/students" id="manage-students">Manage Students</a>
-    <a href="/class_profile" id="class-stats">Class Stats</a>
+    <a href="/coach/resources" id="teacher-resources" class="selected">Middelen voor de leraar(es)<span style="font-size:8px;color:orange;"> NIEUW</span>
+    <a href="/students" id="manage-students">Manage leerlingen</a>
+    <a href="/class_profile" id="class-stats">Klassen overzicht</a>
 </span>
 {% endblock pagesubmenu %}
 
